lcs-web (2.4.9~10) Lcs; urgency=low

  * fix warning in log_rapprochement.php and mails_rediriges.php
  * replace deprecated function in  /var/www/lcs/includes/config.inc.in

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Thu, 31 May 2012 17:26:14 +0200

lcs-web (2.4.9~9) Lcs; urgency=low
  [ Jean-Luc Chretien ]
  * Fix bug in edit_aprams.php

  [ Philippe LECLERC ]
  * Change display for "comptes rapprochés" and "mails redirigés"
  * Add enable/disable module type M

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 31 May 2012 14:44:42 +0200

lcs-web (2.4.9~8) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  2.4.9~9
  * Fix bug in edit_aprams.php
  2.4.9~8
  * Add cat 6 params ENT in  edit_params.php 
  * Fix path in auth_ent.php and logout_ent.php
  * Fix auth choice in barre.php
  * Modify lcs-lenny2squeeze (by Franck Molle)
  * Add chmod 755 on /usr/share/lcs in lcs-web-fixrights
  * Add log_rapprochements.php
  * Modify edit_params.php 
  * Add accordion for authentication LCS or ENT (by misterphi)
  2.4.9~4
  * Modify lcs/logout.php with logout spip ajax request
  * Add first version of lcs-lenny2squeeze
  * Fix a typo erreor in doc/index.php
  * Fix bug in Annu/add_group_right.php
  * Add and modify scripts for AUTH LCS ENT :
     lcs-web/www/lcs/ajax_ent.php
     lcs-web/www/lcs/barre.php
     lcs-web/www/lcs/auth_ent.php
     lcs-web/www/lcs/logout_ent.php
     lcs-web/www/lcs/ent.js
     lcs-web/www/lcs/includes/config.inc.in
     lcs-web/www/lcs/includes/log2lcsentcas_ajax.php
     lcs-web/www/lcs/includes/functions.inc.php
     lcs-web/www/c/ent.css
  * Modify postinst to update config.in.php

  [ Philippe LECLERC ]    
  * Change the test status of a module in gestpack.sh

  [ Jean-Luc Chretien ]
  * Fix bug in createmaildir.sh and mkhdir.sh
  * Add test on folder Profile in open_session function 
  * Fix bug in setup_keys.php : Replace in js mb_substr by substr
  * Add function isRight in LcSe.pm